[b]Version 0.6.6[/b]:

(2008-11-17)
 * Added a new option in Preferences->Subtitle: Freetype support. Disabling
   that option could make smplayer work with a mplayer compiled without
   freetype support. But subtitles may not work at all!

(2008-11-16)
 * The mini gui can now also remember the position and size of the window.
 * (Linux) Now all devices which match with dvd*, cdrom*, cdrw*, sr* 
   and cdrecorder* are added to the comboboxes in Preferences->Drives.

(2008-11-15)
 * Added a new action to select the next aspect ratio. Assigned by default to
   key "A". Unfortunately this change breaks compatibility and the aspect
   ratio setting for all your played videos will be lost.
 * Display the text for the statusbar in the OSD if in fullscreen mode (and
   not paused).
 * Added a new option for smplayer.ini: initial_stereo_mode. It sets the
   stereo mode which will be used as default. 
   Possible values: 0 (stereo), 1 (left) and 2 (right).

(2008-11-14)
 * Added the new section Advanced->Proxy in preferences to configure the 
   proxy.

(2008-11-13)
 * Added some options in smplayer.ini (section [proxy]) to configure a proxy 
   for internet connections. Untested.


[b]Version 0.6.5.1[/b]:

(2008-11-12)
 * Don't pass to mplayer the option -no-correct-pts or -nocorrect-pts if
   the mplayer version is still unknown. Prevents mplayer to fail on the first
   run, complaining about an unknown -no-correct-pts if using a recent version 
   of mplayer (r26842 or above).


[b]Version 0.6.5[/b]:

(2008-11-11)
 * (Linux) Now smplayer tries to follow the XDG Base Directory Specification
   (http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html)
   for the config files. So now smplayer will save its config files under
   the directory $XDG_CONFIG_HOME/smplayer or $HOME/.config/smplayer if
   $XDG_CONFIG_HOME is not defined.
   If you want to keep your preferences, copy the files in $HOME/.smplayer to
   $HOME/.config/smplayer

(2008-11-07)