@@ -1,5 +1,9 @@
 [b]Version 0.6.6[/b]:
 
+(2008-11-18)
+ * Added the possibility to select the type of proxy to be used: Http or
+   Socks5. (More info: http://doc.trolltech.com/4.3/qnetworkproxy.html)
+
 (2008-11-17)
  * Added a new option in Preferences->Subtitle: Freetype support. Disabling
    that option could make smplayer work with a mplayer compiled without
